--- a/Draw/Controller/Room/RoomCell.xib
+++ b/Draw/Controller/Room/RoomCell.xib
@@ -11,10 +11,11 @@
 			<string key="NS.object.0">933</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUITableViewCell</string>
 			<string>IBUIImageView</string>
-			<string>IBUILabel</string>
+			<string>IBUITableViewCell</string>
 			<string>IBUIButton</string>
+			<string>IBUILabel</string>
+			<string>IBUIView</string>
 			<string>IBProxyObject</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
@@ -41,13 +42,43 @@
 						<reference key="NSNextResponder" ref="297589441"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUIImageView" id="753160396">
+								<reference key="NSNextResponder" ref="380575889"/>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrame">{{6, 7}, {60, 62}}</string>
+								<reference key="NSSuperview" ref="380575889"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="427313591"/>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">user_picbg@2x.png</string>
+								</object>
+							</object>
+							<object class="IBUIView" id="427313591">
+								<reference key="NSNextResponder" ref="380575889"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{9, 7}, {55, 57}}</string>
+								<reference key="NSSuperview" ref="380575889"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="318460792"/>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MQA</bytes>
+									<object class="NSColorSpace" key="NSCustomColorSpace">
+										<int key="NSID">2</int>
+									</object>
+								</object>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
 							<object class="IBUILabel" id="64556621">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{71, 28}, {140, 25}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="396181618"/>
+								<reference key="NSNextKeyView" ref="665233394"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="785173849">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MCAwAA</bytes>
@@ -107,16 +138,6 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIImageView" id="150524547">
-								<reference key="NSNextResponder" ref="380575889"/>
-								<int key="NSvFlags">-2147483356</int>
-								<string key="NSFrame">{{10, 10}, {57, 57}}</string>
-								<reference key="NSSuperview" ref="380575889"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="318460792"/>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							</object>
 							<object class="IBUILabel" id="21839038">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
@@ -143,7 +164,7 @@
 								<string key="NSFrame">{{225, 24}, {70, 26}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="665233394"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -184,7 +205,7 @@
 								<string key="NSFrame">{{72, 49}, {213, 25}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="396181618"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -208,7 +229,7 @@
 							<object class="IBUIButton" id="318460792">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{38, -1}, {40, 20}}</string>
+								<string key="NSFrame">{{36, -1}, {40, 20}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="21839038"/>
@@ -241,10 +262,10 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrameSize">{310, 74}</string>
+						<string key="NSFrameSize">{300, 74}</string>
 						<reference key="NSSuperview" ref="297589441"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="150524547"/>
+						<reference key="NSNextKeyView" ref="753160396"/>
 						<reference key="IBUIBackgroundColor" ref="785173849"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -253,7 +274,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{310, 75}</string>
+				<string key="NSFrameSize">{300, 75}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="380575889"/>
@@ -313,6 +334,14 @@
 					<int key="connectionID">23</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">avatarView</string>
+						<reference key="source" ref="297589441"/>
+						<reference key="destination" ref="427313591"/>
+					</object>
+					<int key="connectionID">28</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickInviteButton:</string>
 						<reference key="source" ref="396181618"/>
@@ -345,13 +374,14 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="297589441"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="150524547"/>
 							<reference ref="945254090"/>
 							<reference ref="396181618"/>
 							<reference ref="64556621"/>
 							<reference ref="21839038"/>
 							<reference ref="318460792"/>
 							<reference ref="665233394"/>
+							<reference ref="427313591"/>
+							<reference ref="753160396"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -363,11 +393,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
 						<reference key="object" ref="945254090"/>
-						<reference key="parent" ref="297589441"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">15</int>
-						<reference key="object" ref="150524547"/>
 						<reference key="parent" ref="297589441"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -390,6 +415,17 @@
 						<reference key="object" ref="318460792"/>
 						<reference key="parent" ref="297589441"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">26</int>
+						<reference key="object" ref="427313591"/>
+						<array class="NSMutableArray" key="children"/>
+						<reference key="parent" ref="297589441"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">27</int>
+						<reference key="object" ref="753160396"/>
+						<reference key="parent" ref="297589441"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -397,11 +433,13 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="26.CustomClassName">HJManagedImageV</string>
+				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">RoomCell</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -411,10 +449,18 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">25</int>
+			<int key="maxID">28</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">HJManagedImageV</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HJManagedImageV.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">PPTableViewCell</string>
 					<string key="superclassName">UITableViewCell</string>
@@ -438,6 +484,7 @@
 						</object>
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="avatarView">HJManagedImageV</string>
 						<string key="creatorLabel">UILabel</string>
 						<string key="inviteButton">UIButton</string>
 						<string key="inviteInfoButton">UIButton</string>
@@ -446,6 +493,10 @@
 						<string key="userListLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="avatarView">
+							<string key="name">avatarView</string>
+							<string key="candidateClassName">HJManagedImageV</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="creatorLabel">
 							<string key="name">creatorLabel</string>
 							<string key="candidateClassName">UILabel</string>
@@ -485,6 +536,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="number@2x.png">{50, 45}</string>
 			<string key="orange_button@2x.png">{71, 84}</string>
+			<string key="user_picbg@2x.png">{142, 147}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
